Fixed the textarea and buttons not aligning well in FireFox and IE9 on Windows. This is relevant to issue 878.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -697,6 +697,13 @@ div.columnLinks div.halfcolumn {
 #subItems {
   margin-bottom: 10px;
 }
+
+.addSeveralTaxa textarea {
+  width: 85%;
+}
+#addSeveralTaxaButtons {
+  margin-top: 25px;
+}
 .taxon-list {
   padding-top:14px;
 }
